--- a/Caculator/View/MainWindow.xaml
+++ b/Caculator/View/MainWindow.xaml
@@ -2,6 +2,83 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Calculator"
-        Title="Calculator" Width="360" Height="520"
+        Title="Calculator" Width="360" Height="549"
         ResizeMode="CanResize">
+    
+    <!-- Global style for all buttons -->
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="18"></Setter>
+            <Setter Property="Margin" Value="3"></Setter>
+            <Setter Property="Padding" Value="5"></Setter>
+            <Setter Property="MinHeight" Value="50"></Setter>
+        </Style>
+    </Window.Resources>
+
+    <Grid Background="#f3f3f3" Margin="10">
+        <!-- Outer border for calculator layot-->
+        <Border Background="White" CornerRadius="8" Padding="10" BorderBrush="LightGray" BorderThickness="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <!-- Row 0: Display expression and result -->
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <!-- Row 1: Top function buttions -->
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <!-- Row 2: Main calculator keypad -->
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <!-- Expression and result display -->
+                <Border Grid.Row="0" Background="#fefefe" BorderBrush="#cccccc" 
+                        BorderThickness="1" CornerRadius="6" Padding="10" Margin="0, 0, 0, 10">
+                    <StackPanel Grid.Row="0" Margin="0, 0, 0, 10">
+                    <TextBlock Text="{Binding Expression}" 
+                               FontSize="18" TextAlignment="Right"
+                               Foreground="Gray" TextWrapping="Wrap"></TextBlock>
+                    <TextBlock Text="{Binding Result}" 
+                               FontSize="32" FontWeight="Bold" TextAlignment="Right"
+                               Foreground="Black" TextWrapping="Wrap"></TextBlock>
+                </StackPanel>
+                </Border>
+
+                
+                <!-- Function buttons: Memory, Copy/Paste, Backspace -->
+                <UniformGrid Grid.Row="1" Columns="4" Margin="0, 0, 0. 10">
+                    <Button Content="MR" Command="{Binding MemoryRecallCommand}"></Button>
+                    <Button Content="Copy" Command="{Binding CopyCommand}"></Button>
+                    <Button Content="Paste" Command="{Binding PastCommand}"></Button>
+                    <Button Content="←" Command="{Binding BackSpaceCommand}"></Button>
+                </UniformGrid>
+
+                <!-- Main calculator buttons-->
+                <UniformGrid Grid.Row="2" Columns="4" Rows="5">
+                    <!-- Row 1: Parentheses, Clear, Equals -->
+                    <Button Content="(" Command="{Binding InputCommand}" CommandParameter="("></Button>
+                    <Button Content=")" Command="{Binding InputCommand}" CommandParameter=")"></Button>
+                    <Button Content="AC" Command="{Binding ClearCommand}"></Button>
+                    <Button Content="=" Command="{Binding CalculateCommand}"></Button>
+                    <!-- Row 2: Numbers 7 8 9 and Division -->
+                    <Button Content="7" Command="{Binding InputCommand}" CommandParameter="7"></Button>
+                    <Button Content="8" Command="{Binding InputCommand}" CommandParameter="8"></Button>
+                    <Button Content="9" Command="{Binding InputCommand}" CommandParameter="9"></Button>
+                    <Button Content="/" Command="{Binding InputCommand}" CommandParameter="/"></Button>
+                    <!-- Row 3: Numbers 4 5 6 and Multiplication -->
+                    <Button Content="4" Command="{Binding InputCommand}" CommandParameter="4"></Button>
+                    <Button Content="5" Command="{Binding InputCommand}" CommandParameter="5"></Button>
+                    <Button Content="6" Command="{Binding InputCommand}" CommandParameter="6"></Button>
+                    <Button Content="*" Command="{Binding InputCommand}" CommandParameter="*"></Button>
+                    <!-- Row 4: Numbers 1 2 3 and Subtraction -->
+                    <Button Content="1" Command="{Binding InputCommand}" CommandParameter="1"></Button>
+                    <Button Content="2" Command="{Binding InputCommand}" CommandParameter="2"></Button>
+                    <Button Content="3" Command="{Binding InputCommand}" CommandParameter="3"></Button>
+                    <Button Content="-" Command="{Binding InputCommand}" CommandParameter="-"></Button>
+                    <!--<DataGridRow 5: Number 0, Decimal, Addition, Memory Save-->
+                    <Button Content="0" Command="{Binding InputCommand}" CommandParameter="0"></Button>
+                    <Button Content="." Command="{Binding InputCommand}" CommandParameter="."></Button>
+                    <Button Content="+" Command="{Binding InputCommand}" CommandParameter="+"></Button>
+                    <Button Content="MS" Command="{Binding MemorySaveCommand}"></Button>
+                </UniformGrid>
+            </Grid>
+        </Border>
+    </Grid>
 </Window>
