--- a/Caculator/View/MainWindow.xaml
+++ b/Caculator/View/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Calculator"
-        Title="Calculator" Width="360" Height="549"
+        Title="Calculator" Width="360" Height="550"
         ResizeMode="CanResize">
     
     <!-- Global style for all buttons -->
@@ -46,8 +46,8 @@
                 <UniformGrid Grid.Row="1" Columns="4" Margin="0, 0, 0. 10">
                     <Button Content="MR" Command="{Binding MemoryRecallCommand}"></Button>
                     <Button Content="Copy" Command="{Binding CopyCommand}"></Button>
-                    <Button Content="Paste" Command="{Binding PastCommand}"></Button>
-                    <Button Content="←" Command="{Binding BackSpaceCommand}"></Button>
+                    <Button Content="Paste" Command="{Binding PasteCommand}"></Button>
+                    <Button Content="←" Command="{Binding BackspaceCommand}"></Button>
                 </UniformGrid>
 
                 <!-- Main calculator buttons-->
